thrasyboulos/hydor/overlays/local/olympia/hippokrates/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hippokrates-to-dionysios
  namespace: olympia
spec:
  endpointSelector:
    matchLabels:
      app: dionysios
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: hippokrates
            io.kubernetes.pod.namespace: olympia
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
